--- a/autre page/Contacte.html
+++ b/autre page/Contacte.html
@@ -45,26 +45,34 @@
             Contacte
         </h1>
     </div>
-    <div class="content">
-        <form action="#" method="post">
-            <label for="nom"></label>
-            <input type="text" id="nom" placeholder="Nom" required>
-            <label for="adresse"></label>
-            <input type="text" id="adresse" placeholder=Adresse" required>
-            <label for="ville"></label>
-            <input type="text" id="ville" placeholder="Ville" required>
-            <label for="code_postal"></label>
-            <input type="text" id="code_postal" placeholder="Code postal" required>
-            <label for="telephone"></label>
-            <input type="tel" id="telephone" placeholder="Téléphone" required>
-            <label for="email"></label>
-            <input type="email" id="email" placeholder="Email" required>
-            <label for="aide"></label>
-            <textarea id="aide" placeholder="Comment pouvons-nous vous aider ?
+    <div class="container">
+        <div class="Google">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2745.1268138596774!2d6.621540277512866!3d46.52539236201074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478dcf735a4f874d%3A0x47653ad971127780!2sJobtrekCity!5e0!3m2!1sfr!2sch!4v1697180754348!5m2!1sfr!2sch"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+        <div class="contact">
+            <form action="#" method="post">
+                <label for="nom"></label>
+                <input type="text" id="nom" placeholder="Nom" required>
+                <label for="adresse"></label>
+                <input type="text" id="adresse" placeholder="Adresse" required>
+                <label for="ville"></label>
+                <input type="text" id="ville" placeholder="Ville" required>
+                <label for="code_postal"></label>
+                <input type="text" id="code_postal" placeholder="Code postal" required>
+                <label for="telephone"></label>
+                <input type="tel" id="telephone" placeholder="Téléphone" required>
+                <label for="email"></label>
+                <input type="email" id="email" placeholder="Email" required>
+                <label for="aide"></label>
+                <textarea id="aide" placeholder="Comment pouvons-nous vous aider ?
             " rows="4" required></textarea>
-            <button type="submit">Envoyer</button>
-        </form>
-    </div>
+                <button type="submit">Envoyer</button>
+            </form>
+        </div>
     </div>
 
 </body>
