--- a/autre page/Produits2.html
+++ b/autre page/Produits2.html
@@ -151,7 +151,18 @@
 
     </div>
 
-
+    <div class="Page_Produits">
+        <h1>Page : &nbsp</h1>
+        <a href="Produits1.html">
+            1
+        </a>
+        &nbsp
+        <p>...</p>
+        &nbsp
+        <a href="Produits2.html">
+            2
+        </a>
+    </div>
 
 </body>
 
