--- a/autre page/connexion.html
+++ b/autre page/connexion.html
@@ -10,30 +10,99 @@
 
 <body>
 
-<nav class="Menu">
-    <div class="menu-a">
+    <nav class="Menu">
+        <div class="menu-a">
 
-        <a href="../index.html">
-            Blakiti
-        </a>
+            <a href="../index.html">
+                Blakiti
+            </a>
 
-        <a href="../index.html" id="Accueil">
-            Accueil
-        </a>
+            <a href="../index.html" id="Accueil">
+                Accueil
+            </a>
 
-        <a href="./Produits1.html" id="Produits1">
-    Produits
-        </a>
+            <a href="./Produits1.html" id="Produits1">
+                Produits
+            </a>
 
-        <a href="./Contacte.html">
-            Contacte
-        </a>
+            <a href="./Contacte.html">
+                Contacte
+            </a>
 
-        <a href="./connexion.html">
-            connexion
-        </a>
+            <a href="./connexion.html">
+                connexion
+            </a>
 
-        <img class="logo" src="../Site%20internet/cerf_de_face-removebg-preview.png" id="logo">
+            <img class="logo" src="../image produit/cerf_de_face-removebg-preview.png" id="logo">
+
+        </div>
+    </nav>
+
+    <div class="connexion_slide">
+        <div class="background">
+        </div>
+        <div class="background_right">
+        </div>
+        <div class="background_left">
+            <div class="Nom_site">
+                <h2>Blatikiselling</h2>
+            </div>
+            <div class="Logo_left">
+                <img src="../image produit/cerf_de_face-removebg-preview.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="left_row">
+        <div class="Button_Facebook">
+            <img src="../image produit/Facebook.svg">
+            <div class="texte_with_facebook">
+                <a href="Facebook.com">With Facebook</a>
+            </div>
+        </div>
+        <div class="Button_Google">
+            <div class="logo_google">
+                <img src="../image produit/Google.png">
+            </div>
+            <div class="texte_with_google">
+                <a href="google.com/login">With Google</a>
+            </div>
+        </div>
+
+        <div class="continue_with">
+            <p>or continue with</p>
+        </div>
+
+        <p>Email</p><br><br>
+
+        <div class="Email_input">
+            <input type="text">
+        </div>
+
+        <div class="Mdp_input">
+            <input type="text">
+        </div>
+
+        <div class="contract_termes">
+            <input type="checkbox">
+            <label for="accept-terms">J'accepte les termes et conditions</label>
+        </div>
+
+        <div class="button_inscription">
+            <button type="submit_connection">inscivez-vous</button>
+        </div>
+
+        <p>Vous avez un compte ? <a href="../index.html">Connectez-vous</a></p>
+
+
+
+
 
     </div>
-</nav>
+
+
+
+
+</body>
+
+</html>
