connection page finished

--- a/autre page/Contacte.html
+++ b/autre page/Contacte.html
@@ -45,6 +45,7 @@
             Contacte
         </h1>
     </div>
+
     <div class="container">
         <div class="Google">
             <iframe
@@ -72,6 +73,7 @@
             " rows="4" required></textarea>
                 <button type="submit">Envoyer</button>
             </form>
+            <div class="background_violet"></div>
         </div>
     </div>
 
