--- a/autre page/connexion.html
+++ b/autre page/connexion.html
@@ -38,66 +38,42 @@
         </div>
     </nav>
 
-    <div class="connexion_slide">
-        <div class="background">
+
+    <div class="all">
+        <div class="design">
+            <img src="../image produit/cerf_de_face-removebg-preview.png">
         </div>
-        <div class="background_right">
+        <div class="container">
+            <form action="#" method="post">
+
+                <div class="Button_Facebook">
+                    <a class="logofacebook" href="https://facebook.com"><img class="google"
+                            src="../image produit/facebook.png" alt=""></a>
+                    <a class="txtfacebook" href="Facebook.com">With Facebook</a>
+                </div>
+                <div class="Button_Facebook">
+                    <a class="logofacebook" href="https://google.com"><img class="google"
+                            src="../image produit/google.png" alt=""></a>
+                    <a class="txtgoogle" href="google.com">With Google</a>
+                </div>
+                <div class="continue_w">
+                    <h2>ou continuer avec</h2>
+                </div>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email">
+
+                <label for="motdepasse">Mot de passe</label>
+                <input type="password" id="motdepasse" name="motdepasse">
+
+                <p id="conditions">
+                    En m'inscrivant, j'accepte les termes et conditions ainsi que la politique de confidentialité.</p>
+
+                <input type="submit" value="Créer un compte">
+
+
         </div>
-        <div class="background_left">
-            <div class="Nom_site">
-                <h2>Blatikiselling</h2>
-            </div>
-            <div class="Logo_left">
-                <img src="../image produit/cerf_de_face-removebg-preview.png">
-            </div>
-        </div>
+        </form>
     </div>
-
-    <div class="left_row">
-        <div class="Button_Facebook">
-            <img src="../image produit/Facebook.svg">
-            <div class="texte_with_facebook">
-                <a href="Facebook.com">With Facebook</a>
-            </div>
-        </div>
-        <div class="Button_Google">
-            <div class="logo_google">
-                <img src="../image produit/Google.png">
-            </div>
-            <div class="texte_with_google">
-                <a href="google.com/login">With Google</a>
-            </div>
-        </div>
-
-        <div class="continue_with">
-            <p>or continue with</p>
-        </div>
-
-        <p>Email</p><br><br>
-
-        <div class="Email_input">
-            <input type="text">
-        </div>
-
-        <div class="Mdp_input">
-            <input type="text">
-        </div>
-
-        <div class="contract_termes">
-            <input type="checkbox">
-            <label for="accept-terms">J'accepte les termes et conditions</label>
-        </div>
-
-        <div class="button_inscription">
-            <button type="submit_connection">inscivez-vous</button>
-        </div>
-
-        <p>Vous avez un compte ? <a href="../index.html">Connectez-vous</a></p>
-
-
-
-
-
     </div>
 
 
